# logic_hw

./: CMakeLists.txt
source/: axe_test.cpp  deduction.cpp  deduction.h  hw1.cpp  hw2.cpp  hw3.cpp  proof_builder.cpp  proof_builder.h  prop_input_parser.cpp  prop_input_parser.h  propositional_parser.cpp  propositional_parser.h  propositional_proof.cpp  propositional_proof.h  tests.cpp
